# awoo-os

./: Cargo.toml  build.rs
.cargo/: config.toml
awoo-os-kernel/: Cargo.toml
awoo-os-kernel/.cargo/: config.toml
awoo-os-kernel/assets/: cat.tga  cat_2.tga
awoo-os-kernel/src/: lib.rs  main.rs
awoo-os-kernel/src/constants/: constants.rs
awoo-os-kernel/src/driver/: mod.rs
awoo-os-kernel/src/driver/acpi/: acpi.rs
awoo-os-kernel/src/driver/apic/: apic.rs
awoo-os-kernel/src/driver/apic_timer/: apic_timer.rs  mod.rs
awoo-os-kernel/src/driver/framebuffer/: font.rs  framebuffer.rs  mod.rs
awoo-os-kernel/src/driver/ioapic/: ioapic.rs  mod.rs
awoo-os-kernel/src/driver/keyboard/: keyboard.rs  mod.rs  queue.rs  task.rs
awoo-os-kernel/src/driver/logger/: logger.rs  queue.rs  task.rs
awoo-os-kernel/src/driver/mouse/: mod.rs  mouse.rs  queue.rs  task.rs
awoo-os-kernel/src/driver/pic/: pic.rs
awoo-os-kernel/src/driver/rtc/: rtc.rs
awoo-os-kernel/src/driver/serial/: serial.rs
awoo-os-kernel/src/gdt/: gdt.rs  tss.rs
awoo-os-kernel/src/idt/: idt.rs  test.rs
awoo-os-kernel/src/int/: exceptions.rs  int.rs  mod.rs
awoo-os-kernel/src/logger/: logger.rs
awoo-os-kernel/src/memory/: frame.rs  heap.rs  memory.rs  mod.rs
awoo-os-kernel/src/panic/: panic.rs
awoo-os-kernel/src/pic/: pic.rs
awoo-os-kernel/src/port/: port.rs
awoo-os-kernel/src/screen/: queue.rs  task.rs
awoo-os-kernel/src/special/: qemu.rs
awoo-os-kernel/src/task/: executor.rs  mod.rs  task.rs  waker.rs
awoo-os-kernel/tests/: basic_boot.rs  heap_allocation.rs  stack_overflow.rs
(+37 files in other folders)
