[package]
name = "awoo-os-kernel"
version = "0.1.0"
edition = "2021"

# the profile used for `cargo build`
# [profile.dev]
# panic = "abort" # disable stack unwinding on panic

# the profile used for `cargo build --release`
# [profile.release]
# panic = "abort" # disable stack unwinding on panic

[dependencies]
bootloader_api = "0.11"
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.14.2"
uart_16550 = "0.2.0"
pic8259 = "0.10.1"
pc-keyboard = "0.7.0"
linked_list_allocator = "0.9.0"
bootloader-x86_64-common = "0.11.3"
log = { version = "0.4.17", default-features = false }
tinytga = "0.5.0"
embedded-graphics = "0.8.1"
x2apic = "0.4.3"

[dependencies.acpi]
version = "5.0.0"
features = ["alloc"]

[dependencies.noto-sans-mono-bitmap]
version = "0.3.0"
features = ["size_32"]

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[dependencies.crossbeam-queue]
version = "0.3.11"
default-features = false
features = ["alloc"]

[dependencies.conquer-once]
version = "0.4.0"
default-features = false

[dependencies.futures-util]
version = "0.3.4"
default-features = false
features = ["alloc"]
